added flexibiilty for paths

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -31,6 +31,41 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Set paths for pipeline\n",
+    "\n",
+    "I'm unsure how you're planning to reproduce the results (on Kaggle or elsewhere) so I set it up so the paths can be manually set here"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c4e923fa1e8bffdf"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Models\n",
+    "models_dir = Path('models')\n",
+    "model_file = 'net_epochs-25.pytorch'    # My best model\n",
+    "\n",
+    "# Train data\n",
+    "train_data_path = Path('data/train_imgs')\n",
+    "labels_path = Path('data/labels.csv')\n",
+    "\n",
+    "# Test data\n",
+    "test_path = Path('/kaggle/input/hat-or-no-hat-spring24-cu-denver/test_set/test_set')\n",
+    "sample_submission = Path('results/sample_submission.csv') # Used to get file names for test imgs\n",
+    "\n",
+    "save_dir = Path('results')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4e844ef2d026a6bc"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Preprocess training dataset"
    ],
    "metadata": {
@@ -43,7 +78,7 @@
    "outputs": [],
    "source": [
     "class ImageDataset(Dataset):\n",
-    "    def __init__(self, annotations_file, img_dir, rotate=None, transform=None):\n",
+    "    def __init__(self, annotations_file, img_dir, transform=None):\n",
     "        self.img_labels = pd.read_csv(annotations_file)\n",
     "        self.img_dir = img_dir\n",
     "        self.transform = transform\n",
@@ -59,24 +94,21 @@
     "        angle = random.choice([0, 1, 2, 3])\n",
     "        img = np.rot90(img, angle)\n",
     "\n",
-    "        # have to copy before be called by transform function\n",
     "        return img.copy()\n",
     "\n",
     "\n",
     "    def preprocess_image(self, img, target_size):\n",
     "        # Resize the image\n",
     "        image = img.resize(target_size)\n",
-    "        # Convert image to numpy array\n",
     "        image_array = np.array(image)\n",
     "        # Normalize pixel values\n",
     "        image_array = image_array / 255.0\n",
-    "        # If the image is grayscale, convert it to RGB\n",
+    "        # Convert to RGB if greyscale\n",
     "        if len(image_array.shape) == 2:\n",
     "            image_array = np.stack((image_array,) * 3, axis=-1)\n",
     "        # Randomly flip and rotate image\n",
     "        image_array = self.random_flip_and_rotate(image_array)\n",
     "        return image_array.transpose(2, 0, 1)\n",
-    "        #return image_array\n",
     "                         \n",
     "                         \n",
     "    def __len__(self):\n",
@@ -90,7 +122,6 @@
     "        image.thumbnail(target_size, Image.ANTIALIAS)\n",
     "        new_image = Image.new(\"RGB\", target_size)\n",
     "        new_image.paste(image, ((target_size[0] - image.size[0]) // 2, (target_size[1] - image.size[1]) // 2))\n",
-    "        #image = read_image(img_path)\n",
     "        label = self.img_labels.iloc[idx, 1]\n",
     "        if self.transform:\n",
     "            image = self.transform(np.array(new_image))\n",
@@ -258,9 +289,7 @@
     "    \n",
     "    \n",
     "class Block(nn.Module):\n",
-    "    def __init__(self, \n",
-    "                 in_channels, out_channels,\n",
-    "                 group=1):\n",
+    "    def __init__(self):\n",
     "        super(Block, self).__init__()\n",
     "\n",
     "        self.b1 = ResidualBlock(64, 64)\n",
@@ -315,7 +344,7 @@
     "\n",
     "\n",
     "class Net(nn.Module):\n",
-    "    def __init__(self, **kwargs):\n",
+    "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "\n",
     "        self.sub_mean = MeanShift((0.4488, 0.4371, 0.4040), sub=True)\n",
@@ -380,12 +409,11 @@
     "save_model = True\n",
     "epochs = 25\n",
     "\n",
-    "annotations_file = '/kaggle/input/hat-no-hat-train-labels/img_labels.csv'\n",
-    "img_dir = '/kaggle/input/hat-no-hat-train-imgs-fixed'\n",
+    "annotations_file = labels_path\n",
+    "img_dir = train_data_path\n",
     "train_data = ImageDataset(\n",
     "    annotations_file, \n",
     "    img_dir, \n",
-    "    rotate=True,\n",
     "    transform=ToPILImage()\n",
     ")\n",
     "\n",
@@ -415,8 +443,7 @@
     "        label = target.to(device)\n",
     "        z = data.to(device)\n",
     "        pred_prob = net(z.float())\n",
-    "\n",
-    "        ######### Train generator #########\n",
+    "        \n",
     "        label = label.unsqueeze(1)\n",
     "        label = label.float()\n",
     "        net.zero_grad()\n",
@@ -434,7 +461,7 @@
     "    net.eval()\n",
     "\n",
     "if save_model:\n",
-    "    torch.save(net.state_dict(), f'net_epochs-{epochs}.pytorch')"
+    "    torch.save(net.state_dict(), models_dir / f'net_epochs-{epochs}.pytorch')"
    ],
    "metadata": {
     "collapsed": false
@@ -509,11 +536,9 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "test_path = '/kaggle/input/hat-or-no-hat-spring24-cu-denver/test_set/test_set'\n",
-    "\n",
     "test_data = TestDataset(\n",
     "    test_path, \n",
-    "    file_names='/kaggle/input/hat-or-no-hat-spring24-cu-denver/sample_submission.csv',\n",
+    "    file_names=sample_submission,\n",
     "    transform=ToPILImage()\n",
     ")\n",
     "test_loader = DataLoader(\n",
@@ -523,7 +548,7 @@
     "    shuffle=False, \n",
     ")\n",
     "\n",
-    "weights = torch.load('/kaggle/working/net_epochs-25.pytorch')\n",
+    "weights = torch.load(model_file)\n",
     "net = Net()\n",
     "net.to(device)\n",
     "net.load_state_dict(weights)\n",
@@ -566,7 +591,7 @@
     "\n",
     "submission_dict = {'id': img_ids, 'class': y_pred}\n",
     "submission_df = pd.DataFrame.from_dict(submission_dict)\n",
-    "submission_df.to_csv(\"/kaggle/working/submission.csv\", index=False)"
+    "submission_df.to_csv(save_dir / \"submission.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false
